2004-04-13  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Replaced binary mount data with text options

	* Show FUSE specific mount options in /proc/mounts

	* Check in fuse.h whether _FILE_OFFSET_BITS is set to 64

2004-04-09  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Check some limits so userspace won't get too big requests

2004-04-05  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Kill compile warning

	* Upgraded user-mount patch for 2.6.5

2004-04-02  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Add detection of user-mode-linux to configure

2004-03-31  Miklos Szeredi <mszeredi@inf.bme.hu>

	* fixed zero size case for getxattr and listxattr

2004-03-30  Miklos Szeredi <mszeredi@inf.bme.hu>

	* new fusermount flag '-z': lazy unmount, default is not lazy

	* Extended attributes operations added (getxattr, setxattr,
	listxattr, removexattr)

2004-03-25  Miklos Szeredi <mszeredi@inf.bme.hu>

	* If filesystem doesn't define a statfs operation, then an
	all-zero default statfs is returned instead of ENOSYS

2004-03-24  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Add FS_BINARY_MOUNTDATA filesystem flag for kernels > 2.6.4

2004-03-09  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix for uClinux (Christian Magnusson)

2004-03-02  Miklos Szeredi <mszeredi@inf.bme.hu>

	* fuse_main() adds "-n progname" to the fusermount command line
	
	* More kernel interface changes:

	* Lookup/getattr return cache timeout values

2004-02-25  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Clean up option parsing in fuse_main()

	* Added fuse_get() function which returns the fuse object created
	by fuse_main()

2004-02-20  Miklos Szeredi <mszeredi@inf.bme.hu>

	* removed old way of mounting (fusermount mountpoint program)

	* more kernel interface changes:

	* added nanosecond precision to file times

	* removed interface version from mount data

	* added /proc/fs/fuse/version which contains MAJOR.MINOR

2004-02-19  Miklos Szeredi <mszeredi@inf.bme.hu>
